--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -306,12 +306,12 @@ eng:
         # goat_farming: "Élevage caprins"
         # handicraft: "Artisanat"
         # maize_crops: "Culture de maïs"
+        # meadow: "Prairie"
         # oilseed_crops: "Culture oléagineuse"
         # palmiped_farming: "Élevage de palmipèdes"
         # pig_farming: "Élevage porcins"
         # potato_crops: "Culture de pomme de terre"
         # poultry_farming: "Élevage avicole"
-        # prairie: "Prairie"
         # protein_crops: "Culture protéagineuse"
         # purchases: "Achats"
         # rabbit_farming: "Élevage cunicole"
@@ -1680,6 +1680,7 @@ eng:
         # corn_grain: "Graine de maïs"
         # corn_grain_crop: "Culture de maïs grain"
         # corn_seed_25: "Semence de maïs sac de 25kg"
+        # corn_seed_crop: "Culture de maïs semence"
         # corn_silage_crop: "Culture de maïs ensilage"
         # cow_milk: "Lait de vache"
         # cultivable_zone: "Zone cultivable"
@@ -1918,23 +1919,38 @@ eng:
         # wine_crop: "Vigne"
         young_cow: "Young cow" #?
       name: "Name"
-    production_natures:  #?
-      items: #?
+    production_natures:
+      attributes:
+        # activity: "Activité"
+        # telepac_crop_code: "Code de type de culture TELEPAC"
+        # variant_crop: "variante de culture"
+      choices: #?
+      items:
         animal_farming: "Animal farming" #?
         animal_global_documentation: "Animal global documentation" #?
+        # annual_frost_fallow_land: "Gel annuel"
         feeding: "Feeding" #?
+        # grain_corn: "Maïs grain"
         identification: "Identification" #?
         land_parcel_management: "Land parcel management" #?
         marketing: "Marketing" #?
+        # permanent_meadow: "Prairie permanente"
         production: "Production" #?
         reproduction: "Reproduction" #?
         sanitary: "Sanitary" #?
+        # seed_corn: "Maïs semence"
+        # silage_corn: "Maïs ensilage"
         stock_management: "Stock management" #?
+        # sunflower: "Tournesol"
+        # temporary_meadow: "Prairie temporaire"
         transformation: "Transformation" #?
         vegetal_crops: "Vegetal crops" #?
         vegetal_global_documentation: "Vegetal global documentation" #?
         vinification: "Vinification" #?
-      name: "Name" #?
+        # winter_hard_wheat: "Blé dur d'hiver"
+        # winter_soft_wheat: "Blé tendre d'hiver"
+        # without_crop: "Hors culture"
+      name: "Name"
     roles:
       items:
         # driver: "Conducteur"
