--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -2197,8 +2197,10 @@ arb:
     need_stocks_building_to_create_products: "يجب عليك انشاء موقع للتخزين لتتمكن من انشاء منتج"
     need_stocks_to_create_inventories: "يجب عليك ادارة الاسهم لمنتج واحد كحد ادنى لتتمكن من اجراء عمليات الجرد"
     # need_to_create_activity: "Vous devez créer des activités pour pouvoir affecter vos écritures comptables"
+    # need_to_create_productions: "Vous devez créer des productions"
     need_to_create_subscription_nature: "يجب عليك انشاء نوع اشتراك لتتمكن من ادارة اشتراكاتك"
     new_actual_number: "الرقم الجديد الحالي هو %{actual_number}"
+    # new_values_are_calculated: "De nouvelles valeurs ont été calculées"
     no_authenticated: "ليس بامكانك ان تكون محدد، ان اسم المستخدم او كلمة المرور غير صحيحة"
     no_balance_template: "ليس هناك من نموذج لوثيقة الرصيد"
     no_building: "لم يتم التعرف على اي موقع للتخزين، الرجاء انشاء واحد لتتمكن من ادارة اسهمك"
