--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -1861,8 +1861,10 @@ jpn:
     # need_stocks_building_to_create_products: "Vous devez créer un lieu de stockage pour pouvoir créer un produit"
     # need_stocks_to_create_inventories: "Vous devez gérer les stocks d’au moins un produit pour pouvoir faire un inventaire"
     # need_to_create_activity: "Vous devez créer des activités pour pouvoir affecter vos écritures comptables"
+    # need_to_create_productions: "Vous devez créer des productions"
     # need_to_create_subscription_nature: "Vous devez créer un type d’abonnement pour pouvoir gérer vos abonnements"
     # new_actual_number: "Le nouveau numéro en cours est %{actual_number}"
+    # new_values_are_calculated: "De nouvelles valeurs ont été calculées"
     # no_authenticated: "Vous n’avez pas pu être identifié. Le nom d’utilisateur ou le mot de passe doit être incorrect."
     # no_balance_template: "Pas de modèle de document pour la balance"
     # no_building: "Aucun lieu de stockage n’est défini. Veuillez en créer un pour pouvoir gérer vos stocks"
