--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -2006,8 +2006,10 @@ spa:
     need_stocks_building_to_create_products: "Se debe crear un lugar de almacenamiento para crear un producto"
     need_stocks_to_create_inventories: "Se debe administrar los depositos a lo menos de un producto para hacer un inventario"
     # need_to_create_activity: "Vous devez créer des activités pour pouvoir affecter vos écritures comptables"
+    # need_to_create_productions: "Vous devez créer des productions"
     need_to_create_subscription_nature: "se debe crear un tipo de abono para administrar los abonos"
     new_actual_number: "El nuevo numero en curso es %{numero_actual}"
+    # new_values_are_calculated: "De nouvelles valeurs ont été calculées"
     no_authenticated: "No puede ser identificado. El nombre de utilizador o la contrasña debe de ser incorrecta."
     no_balance_template: "No hay modelo de documento para este equilibrio"
     no_building: "Ningun lugar de almacenamineto es definido. por favor cree uno para administrar los depositos"
