--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -1952,8 +1952,10 @@ eng:
     need_stocks_building_to_create_products: "You must create a building to be able to create a product"
     need_stocks_to_create_inventories: "You have to manage some stocks in order to manage inventories"
     # need_to_create_activity: "Vous devez créer des activités pour pouvoir affecter vos écritures comptables"
+    # need_to_create_productions: "Vous devez créer des productions"
     need_to_create_subscription_nature: "You must create a type of subscription to manage your subscriptions"
     new_actual_number: "The new number is being %{actual_number}"
+    # new_values_are_calculated: "De nouvelles valeurs ont été calculées"
     no_authenticated: "You could not be identified. The user_name or password must be incorrect."
     # no_balance_template: "Pas de modèle de document pour la balance"
     no_building: "No building is defined. Please create one in order to manage your stocks"
