--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -141,7 +141,7 @@ jpn:
       # edit: "Modifier la zone cultivable\_: %{name}"
       # index: "Zones cultivables"
       # new: "Nouvelle zone cultivable\_: %{name}"
-      # show: "Zone cultivable"
+      # show: "Zone cultivable %{name}"
     backend/custom_field_choices:
       # edit: "Modifier l’option\_: %{name}"
       # new: " Création d’une option pour une liste de choix"
@@ -802,6 +802,7 @@ jpn:
     # add_x_html: "Ajouter «\_%{x}\_»"
     # address: "Adresse"
     # affair: "Affaire"
+    # affairs: "Affaires"
     # all: "Tous"
     # all_accounts: "Tous les comptes"
     # all_areas: "— Toutes les zones postales —"
