--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1045,7 +1045,7 @@ eng:
         # varieties: "Variétés"
       items:
         # alfalfa: "Luzerne"
-        # autumn_crop: "Cultures d'automne"
+        # autumn_crop: "Cultures d’automne"
         # bean: "Haricot"
         # beet: "Betterave"
         # carrot: "Carotte"
@@ -1065,7 +1065,7 @@ eng:
         # sunflower: "Tournesol"
         # vetch: "Féverole"
         # wheat: "Blé"
-        # winter_straw_cereal: "Céréales à paille d'hiver"
+        # winter_straw_cereal: "Céréales à paille d’hiver"
       # name: "Typologie de culture (France)"
     guide_natures:
       items:
@@ -1255,7 +1255,7 @@ eng:
         immunoglobulins_concentration: "Immunoglobulins concentration"
         in_production: "In production" #?
         inhibitors_presence: "Inhibitors presence"
-        # irrigation_water_input_per_area: "Quantité d'eau d'irrigation par unité de surface"
+        # irrigation_water_input_per_area: "Quantité d’eau d’irrigation par unité de surface"
         # leaf_count: "Nombre de talles"
         # length: "Longueur"
         lipolysis: "Lipolysis"
@@ -1267,6 +1267,7 @@ eng:
         # mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Mammalia reproduction state"
         # mammalia_twins_condition: "Naissance de jumeaux"
+        # mass_area_yield: "Rendement de masse surfacique"
         # maximum_load_net_mass: "Masse nette maximale en charge"
         # maximum_load_net_volume: "Capacité volumique nette maximum"
         # meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
@@ -1276,7 +1277,8 @@ eng:
         # net_surface_area: "Surface nette"
         # net_volume: "Volume net"
         # nitrogen_concentration: "Teneur en azote"
-        # nitrogen_input_per_area: "Quantité d'azote par unité de surface"
+        # nitrogen_input_area_density: "Densité d’apport d’azote"
+        # nitrogen_input_per_area: "Quantité d’azote par unité de surface"
         # phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Plant life state"
         # plant_per_area: "pied par unité de surface"
@@ -1491,7 +1493,7 @@ eng:
         # harvest: "Récolte"
         # haymaking: "Fenaison"
         # implant: "Plantation"
-        # implantation: "Implantation d'une culture"
+        # implantation: "Implantation d’une culture"
         # milk_production: "Production laitière"
         # oviparous_birth: "Reproduction (ovipare)"
         # plant_fertilisation: "Fertilisation"
@@ -1747,8 +1749,8 @@ eng:
         # office_building: "Bureau"
         # office_building_division: "Pièce de bureau"
         # other_herbicide: "Herbicide autre"
-        # ovis_compost: "Compost d'ovin"
-        # ovis_manure: "Fumier d'ovin"
+        # ovis_compost: "Compost d’ovin"
+        # ovis_manure: "Fumier d’ovin"
         # pea_crop: "Culture de pois"
         # pea_seed: "Semence de pois"
         # permanent_meadow_crop: "Culture de prairie permanente"
@@ -1947,8 +1949,8 @@ eng:
         vegetal_crops: "Vegetal crops" #?
         vegetal_global_documentation: "Vegetal global documentation" #?
         vinification: "Vinification" #?
-        # winter_hard_wheat: "Blé dur d'hiver"
-        # winter_soft_wheat: "Blé tendre d'hiver"
+        # winter_hard_wheat: "Blé dur d’hiver"
+        # winter_soft_wheat: "Blé tendre d’hiver"
         # without_crop: "Hors culture"
       name: "Name"
     roles:
