--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -853,7 +853,7 @@ fra:
         height: "Hauteur"
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
-        irrigation_water_input_per_area: "Quantité d'eau d'irrigation par unité de surface"
+        irrigation_water_input_per_area: "Quantité d’eau d’irrigation par unité de surface"
         leaf_count: "Nombre de talles"
         length: "Longueur"
         lipolysis: "Lipolyse"
@@ -865,6 +865,7 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         mammalia_twins_condition: "Naissance de jumeaux"
+        mass_area_yield: "Rendement de masse surfacique"
         maximum_load_net_mass: "Masse nette maximale en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
@@ -874,7 +875,8 @@ fra:
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
-        nitrogen_input_per_area: "Quantité d'azote par unité de surface"
+        nitrogen_input_area_density: "Densité d’apport d’azote"
+        nitrogen_input_per_area: "Quantité d’azote par unité de surface"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_per_area: "pied par unité de surface"
@@ -3346,7 +3348,7 @@ fra:
         height: "Hauteur"
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
-        irrigation_water_input_per_area: "Quantité d'eau d'irrigation par unité de surface"
+        irrigation_water_input_per_area: "Quantité d’eau d’irrigation par unité de surface"
         leaf_count: "Nombre de talles"
         length: "Longueur"
         lipolysis: "Lipolyse"
@@ -3358,6 +3360,7 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         mammalia_twins_condition: "Naissance de jumeaux"
+        mass_area_yield: "Rendement de masse surfacique"
         maximum_load_net_mass: "Masse nette maximale en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
@@ -3367,7 +3370,8 @@ fra:
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
-        nitrogen_input_per_area: "Quantité d'azote par unité de surface"
+        nitrogen_input_area_density: "Densité d’apport d’azote"
+        nitrogen_input_per_area: "Quantité d’azote par unité de surface"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_per_area: "pied par unité de surface"
@@ -4109,7 +4113,7 @@ fra:
         height: "Hauteur"
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
-        irrigation_water_input_per_area: "Quantité d'eau d'irrigation par unité de surface"
+        irrigation_water_input_per_area: "Quantité d’eau d’irrigation par unité de surface"
         leaf_count: "Nombre de talles"
         length: "Longueur"
         lipolysis: "Lipolyse"
@@ -4121,6 +4125,7 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         mammalia_twins_condition: "Naissance de jumeaux"
+        mass_area_yield: "Rendement de masse surfacique"
         maximum_load_net_mass: "Masse nette maximale en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
@@ -4130,7 +4135,8 @@ fra:
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
-        nitrogen_input_per_area: "Quantité d'azote par unité de surface"
+        nitrogen_input_area_density: "Densité d’apport d’azote"
+        nitrogen_input_per_area: "Quantité d’azote par unité de surface"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_per_area: "pied par unité de surface"
@@ -5119,7 +5125,7 @@ fra:
         height: "Hauteur"
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
-        irrigation_water_input_per_area: "Quantité d'eau d'irrigation par unité de surface"
+        irrigation_water_input_per_area: "Quantité d’eau d’irrigation par unité de surface"
         leaf_count: "Nombre de talles"
         length: "Longueur"
         lipolysis: "Lipolyse"
@@ -5131,6 +5137,7 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         mammalia_twins_condition: "Naissance de jumeaux"
+        mass_area_yield: "Rendement de masse surfacique"
         maximum_load_net_mass: "Masse nette maximale en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
@@ -5140,7 +5147,8 @@ fra:
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
-        nitrogen_input_per_area: "Quantité d'azote par unité de surface"
+        nitrogen_input_area_density: "Densité d’apport d’azote"
+        nitrogen_input_per_area: "Quantité d’azote par unité de surface"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_per_area: "pied par unité de surface"
@@ -5393,7 +5401,7 @@ fra:
         height: "Hauteur"
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
-        irrigation_water_input_per_area: "Quantité d'eau d'irrigation par unité de surface"
+        irrigation_water_input_per_area: "Quantité d’eau d’irrigation par unité de surface"
         leaf_count: "Nombre de talles"
         length: "Longueur"
         lipolysis: "Lipolyse"
@@ -5405,6 +5413,7 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         mammalia_twins_condition: "Naissance de jumeaux"
+        mass_area_yield: "Rendement de masse surfacique"
         maximum_load_net_mass: "Masse nette maximale en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
@@ -5414,7 +5423,8 @@ fra:
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
-        nitrogen_input_per_area: "Quantité d'azote par unité de surface"
+        nitrogen_input_area_density: "Densité d’apport d’azote"
+        nitrogen_input_per_area: "Quantité d’azote par unité de surface"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_per_area: "pied par unité de surface"
@@ -5458,7 +5468,7 @@ fra:
         height: "Hauteur"
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
-        irrigation_water_input_per_area: "Quantité d'eau d'irrigation par unité de surface"
+        irrigation_water_input_per_area: "Quantité d’eau d’irrigation par unité de surface"
         leaf_count: "Nombre de talles"
         length: "Longueur"
         lipolysis: "Lipolyse"
@@ -5470,6 +5480,7 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         mammalia_twins_condition: "Naissance de jumeaux"
+        mass_area_yield: "Rendement de masse surfacique"
         maximum_load_net_mass: "Masse nette maximale en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
@@ -5479,7 +5490,8 @@ fra:
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
-        nitrogen_input_per_area: "Quantité d'azote par unité de surface"
+        nitrogen_input_area_density: "Densité d’apport d’azote"
+        nitrogen_input_per_area: "Quantité d’azote par unité de surface"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_per_area: "pied par unité de surface"
