--- a/config/locales/fra/enumerize.yml
+++ b/config/locales/fra/enumerize.yml
@@ -79,6 +79,11 @@ fra:
         exterior: "Sortie"
         interior: "Entrée"
         transfer: "Transfert"
+    production_support_marker:
+      aim:
+        maximum: "Maximum"
+        minimum: "Minimum"
+        perfect: "Idéal"
     sequence:
       period:
         cweek: "Semaine"
