--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -890,7 +890,7 @@ fra:
         varieties: "Variétés"
       items:
         alfalfa: "Luzerne"
-        autumn_crop: "Cultures d'automne"
+        autumn_crop: "Cultures d’automne"
         bean: "Haricot"
         beet: "Betterave"
         carrot: "Carotte"
@@ -910,7 +910,7 @@ fra:
         sunflower: "Tournesol"
         vetch: "Féverole"
         wheat: "Blé"
-        winter_straw_cereal: "Céréales à paille d'hiver"
+        winter_straw_cereal: "Céréales à paille d’hiver"
     guide_natures:
       name: "Type de guides"
       items:
@@ -1050,7 +1050,7 @@ fra:
         height: "Hauteur"
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
-        irrigation_water_input_per_area: "Quantité d'eau d'irrigation par unité de surface"
+        irrigation_water_input_per_area: "Quantité d’eau d’irrigation par unité de surface"
         leaf_count: "Nombre de talles"
         length: "Longueur"
         lipolysis: "Lipolyse"
@@ -1062,7 +1062,7 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         mammalia_twins_condition: "Naissance de jumeaux"
-        # mass_area_yield: "Mass area yield"
+        mass_area_yield: "Rendement de masse surfacique"
         maximum_load_net_mass: "Masse nette maximale en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
@@ -1072,8 +1072,8 @@ fra:
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
-        # nitrogen_input_area_density: "Nitrogen input area density"
-        nitrogen_input_per_area: "Quantité d'azote par unité de surface"
+        nitrogen_input_area_density: "Densité d’apport d’azote"
+        nitrogen_input_per_area: "Quantité d’azote par unité de surface"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_per_area: "pied par unité de surface"
@@ -1776,7 +1776,7 @@ fra:
         haymaking: "Fenaison"
         # hoeing: "Hoeing"                                 # tillage
         implant: "Plantation"                              # implantation
-        implantation: "Implantation d'une culture"
+        implantation: "Implantation d’une culture"
         milk_production: "Production laitière"             # animal_production
         oviparous_birth: "Reproduction (ovipare)"
         plant_fertilisation: "Fertilisation"
@@ -2038,8 +2038,8 @@ fra:
         office_building: "Bureau"
         office_building_division: "Pièce de bureau"
         other_herbicide: "Herbicide autre"
-        ovis_compost: "Compost d'ovin"
-        ovis_manure: "Fumier d'ovin"
+        ovis_compost: "Compost d’ovin"
+        ovis_manure: "Fumier d’ovin"
         pea_crop: "Culture de pois"
         pea_seed: "Semence de pois"
         permanent_meadow_crop: "Culture de prairie permanente"
@@ -2210,8 +2210,8 @@ fra:
         silage_corn: "Maïs ensilage"
         sunflower: "Tournesol"
         temporary_meadow: "Prairie temporaire"
-        winter_hard_wheat: "Blé dur d'hiver"
-        winter_soft_wheat: "Blé tendre d'hiver"
+        winter_hard_wheat: "Blé dur d’hiver"
+        winter_soft_wheat: "Blé tendre d’hiver"
         without_crop: "Hors culture"
     roles:
       name: "Nom"
