--- a/config/locales/spa/enumerize.yml
+++ b/config/locales/spa/enumerize.yml
@@ -80,6 +80,11 @@ spa:
         # exterior: "Sortie"
         # interior: "Entrée"
         # transfer: "Transfert"
+    production_support_marker:
+      aim:
+        # maximum: "Maximum"
+        # minimum: "Minimum"
+        # perfect: "Idéal"
     sequence:
       period:
         # cweek: "Semaine"
