--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1062,7 +1062,7 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         mammalia_twins_condition: "Naissance de jumeaux"
-        # mass_area_yield: "Mass area yield"
+        mass_area_yield: "Rendement massique par unité de surface"
         maximum_load_net_mass: "Masse nette maximale en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
@@ -1072,7 +1072,7 @@ fra:
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
-        # nitrogen_input_area_density: "Nitrogen input area density"
+        nitrogen_input_area_density: "Quantité d'azote par unité de surface"
         nitrogen_input_per_area: "Quantité d'azote par unité de surface"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
@@ -2382,7 +2382,7 @@ fra:
         carignan: "Carignan"                               # vitis_vinifera
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)" # land_parcel
         chardonnay: "Chardonnay"                           # vitis_vinifera
-        chemical_fertiliser: "Engrais chimique"            # mineral_matter
+        chemical_fertilizer: "Engrais chimique"       # mineral_matter
         chesnut_red_soil: "Terres rouges à chataigniers"   # land_parcel
         cichorium: "Chicoré"                               # asteraceae
         clay_limestone_soil: "Sol argilo-calcaire (Groies)" # land_parcel
