Cleans code and update dependencies

--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -77,6 +77,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -286,6 +287,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -495,6 +497,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -941,6 +944,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -1218,6 +1222,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -1626,6 +1631,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -1920,6 +1926,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -2129,6 +2136,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -2479,6 +2487,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -2688,6 +2697,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -2942,6 +2952,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -3151,6 +3162,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -3496,6 +3508,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -3704,6 +3717,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -3913,6 +3927,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -4189,6 +4204,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -4472,6 +4488,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -4713,6 +4730,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -4921,6 +4939,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
@@ -5197,6 +5216,7 @@ fra:
         carignan: "Carignan"
         champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         chardonnay: "Chardonnay"
+        chemical_fertilizer: "Engrais chimique"
         chesnut_red_soil: "Terres rouges à chataigniers"
         cichorium: "Chicoré"
         clay_limestone_soil: "Sol argilo-calcaire (Groies)"
