--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -1983,6 +1983,7 @@ spa:
         # carignan: "Carignan"
         # champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         # chardonnay: "Chardonnay"
+        # chemical_fertilizer: "Engrais chimique"
         # chesnut_red_soil: "Terres rouges à chataigniers"
         # cichorium: "Chicoré"
         # clay_limestone_soil: "Sol argilo-calcaire (Groies)"
