--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -2105,6 +2105,7 @@ eng:
         # carignan: "Carignan"
         # champagne_soil: "Sols sur craie Sud Charente et Charente-Martime (Terres de champagne)"
         # chardonnay: "Chardonnay"
+        # chemical_fertilizer: "Engrais chimique"
         # chesnut_red_soil: "Terres rouges à chataigniers"
         # cichorium: "Chicoré"
         # clay_limestone_soil: "Sol argilo-calcaire (Groies)"
