--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1661,7 +1661,7 @@ eng:
         # cattle_slurry: "Lisier de bovins"
         # cereals_feed_bag_25: "Aliments céréales en sac de 25 kg"
         # champagne_land_parcel: "Parcelle sur craie Sud Charente et Charente-Martime  (terre de champagne)"
-        # chemical_fertiliser_division: "Emplacement de stockage des engrais"
+        # chemical_fertilizer_division: "Emplacement de stockage des engrais"
         # clay_land_parcel: "Parcelle d’argile lourde"
         # clay_limestone_land_parcel: "Parcelle argilo-calcaire (Groies)"
         # complete_herbicide: "Herbicide total"
@@ -1869,7 +1869,7 @@ eng:
         # female_adult_cattle_herd: "Troupeau de vaches"
         # female_adult_cow: "Vache"
         # female_young_cow: "Génisse"
-        # fertiliser_division: "Zone engrais"
+        # fertilizer_division: "Zone de stockage des engrais"
         # food: "Aliment"
         # forager: "Ensileuse"
         # fruit: "Fruit"
