change translation of excrement

--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -2004,7 +2004,7 @@ arb:
         # equus: "Equin"
         # esperia: "Esperia"
         # euclide: "Euclide"
-        # excrement: "Excrément"
+        # excrement: "Engrais organiques"
         # fabaceae: "Fabaceae"
         # fabulis: "Fabulis"
         # flap_silt_soil: "Limons battants"
