--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -2123,7 +2123,7 @@ eng:
         # equus: "Equin"
         # esperia: "Esperia"
         # euclide: "Euclide"
-        # excrement: "Excrément"
+        # excrement: "Engrais organiques"
         # fabaceae: "Fabaceae"
         # fabulis: "Fabulis"
         # flap_silt_soil: "Limons battants"
