--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -2006,7 +2006,7 @@ jpn:
         # equus: "Equin"
         # esperia: "Esperia"
         # euclide: "Euclide"
-        # excrement: "Excrément"
+        # excrement: "Engrais organiques"
         # fabaceae: "Fabaceae"
         # fabulis: "Fabulis"
         # flap_silt_soil: "Limons battants"
