--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -2001,7 +2001,7 @@ spa:
         # equus: "Equin"
         # esperia: "Esperia"
         # euclide: "Euclide"
-        # excrement: "Excrément"
+        # excrement: "Engrais organiques"
         # fabaceae: "Fabaceae"
         # fabulis: "Fabulis"
         # flap_silt_soil: "Limons battants"
