--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -95,7 +95,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
@@ -305,7 +305,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
@@ -515,7 +515,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
@@ -962,7 +962,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
@@ -1240,7 +1240,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
@@ -1649,7 +1649,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
@@ -1944,7 +1944,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
@@ -2154,7 +2154,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
@@ -2505,7 +2505,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
@@ -2715,7 +2715,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
@@ -2970,7 +2970,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
@@ -3180,7 +3180,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
@@ -3526,7 +3526,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
@@ -3735,7 +3735,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
@@ -3945,7 +3945,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
@@ -4222,7 +4222,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
@@ -4506,7 +4506,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
@@ -4748,7 +4748,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
@@ -4957,7 +4957,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
@@ -5234,7 +5234,7 @@ fra:
         equus: "Equin"
         esperia: "Esperia"
         euclide: "Euclide"
-        excrement: "Excrément"
+        excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
         fabulis: "Fabulis"
         flap_silt_soil: "Limons battants"
